# tendencia

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: sources.yaml  topics.yaml
data/2026-Q2/: findings.json  sources.json
data/2026-Q2/uploads/: manifest.json
reports/2026-Q2/: ai-security-trends.md  brief.txt
tendencia/: __init__.py  cli.py  config_loader.py  loaders.py  models.py  pipeline.py  quarter.py  seed_sources.py  taxonomy.py
tendencia/analysis/: __init__.py  ranker.py  trends.py
tendencia/collectors/: __init__.py  arxiv.py  ddg.py  rss.py
tendencia/report/: __init__.py  charts.py  generator.py  pdf_report.py  terminal.py
tendencia/report/templates/: report_ru_exec.md.j2
tendencia/uploads/: __init__.py  collector.py  extract.py  store.py
