[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tendencia"
version = "0.1.0"
description = "Квартальный мониторинг трендов AI Security"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=7.0.0",
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-dateutil>=2.9.0",
    "rich>=13.7.0",
    "fpdf2>=2.8.0",
]

[project.scripts]
tendencia = "tendencia.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tendencia*"]
